--- a/styles.css
+++ b/styles.css
@@ -41,8 +41,22 @@ a:visited {
   margin-bottom: 20px;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 700px) {
   .info {
+    text-align: center;
+    display: block;
+   }
+}
+
+@media (max-width:768px) {
+      .info {
+    text-align: center;
+    display: block;
+   }
+}
+
+@media (max-width:320px) {
+      .info {
     text-align: center;
     display: block;
    }
