--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,19 @@ a:visited {
 }
 
 @media (max-width: 768px) {
+  .avatar {
+    text-align: center;
+/*     display: block; */
+   }
+}
+
+@media (max-width: 320px) {
+  .avatar {
+    text-align: center;
+/*     display: block; */
+   }
+    
+@media (max-width: 768px) {
   .info {
     text-align: center;
     display: block;
